--- a/roles/vault/templates/vaultconfig.hcl.j2
+++ b/roles/vault/templates/vaultconfig.hcl.j2
@@ -6,7 +6,7 @@ database = "{{ vault_backend_db | default('vault') }}"
 scheme = "http"
 }
 listener "tcp" {
-address = "{{ hostvars[inventory_hostname] }}:{{ vault_port | default(8200) }}"
+address = "{{ vaultservers }}:{{ vault_port | default(8200) }}"
 tls_disable = 1
 }
 disable_mlock = true
