--- a/roles/mongodb/templates/sweagle-mongod.conf.j2
+++ b/roles/mongodb/templates/sweagle-mongod.conf.j2
@@ -31,7 +31,7 @@ net:
 
 
 security:
-  authorization: "{{ mongodb_security_authorization }}"
+  authorization: "enabled"
 #operationProfiling:
 
 #replication:
