--- a/roles/mongodb/templates/mongod.conf-sweagle.j2
+++ b/roles/mongodb/templates/mongod.conf-sweagle.j2
@@ -7,7 +7,7 @@
 systemLog:
   destination: file
   logAppend: true
-  path: /var/log/mongodb/mongod.log
+  path: "{{ mongodb_systemlog_path }}"
 
 # Where and how to store data.
 storage:
