--- a/roles/sweagle/templates/3.1.0/sites-available/default.j2
+++ b/roles/sweagle/templates/3.1.0/sites-available/default.j2
@@ -21,7 +21,7 @@ server {
         #ssl_certificate /etc/ssl/sweagle.pem;
         #ssl_certificate_key /etc/ssl/sweagle.key;
 
-        root {{ sweagle_web_root_dir }};
+        root {{ nginx_web_root_dir }};
         index index.html;
 
         server_name {{ sweagle_tenant }}.sweagle.com;
