--- a/roles/sweagle/templates/3.1.0/nginx.conf.j2
+++ b/roles/sweagle/templates/3.1.0/nginx.conf.j2
@@ -4,13 +4,12 @@ pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-	worker_connections 768;
+	# default 	worker_connections 768;
+	worker_connections 1024;
 	# multi_accept on;
 }
 
 http {
-  include /etc/nginx/sites-available/*;
-
 	##
 	# Basic Settings
 	##
@@ -39,8 +38,8 @@ http {
 	# Logging Settings
 	##
 
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
+	access_log {{ nginx_log_dir }}/access.log;
+	error_log {{ nginx_log_dir }}/error.log;
 
 	##
 	# Gzip Settings
@@ -60,7 +59,7 @@ http {
 	##
 
 	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+	#include /etc/nginx/sites-enabled/*;
 }
 
 
