--- a/roles/sweagle/templates/3.1.0/nginx.conf.j2
+++ b/roles/sweagle/templates/3.1.0/nginx.conf.j2
@@ -38,8 +38,8 @@ http {
 	# Logging Settings
 	##
 
-	access_log {{ nginx_log_dir }}/access.log;
-	error_log {{ nginx_log_dir }}/error.log;
+	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
 
 	##
 	# Gzip Settings
