set conf as var

--- a/roles/elasticsearch/templates/elasticsearch.j2
+++ b/roles/elasticsearch/templates/elasticsearch.j2
@@ -27,7 +27,7 @@ ES_JVM_OPTIONS={{ es_conf_dir }}/jvm.options
 #ES_RESTART_ON_UPGRADE=true
 
 # Path to the GC log file
-#ES_GC_LOG_FILE=/var/log/elasticsearch/gc.log
+#ES_GC_LOG_FILE={{ es_log_dir }}/gc.log
 
 ################################
 # Elasticsearch service
