--- a/roles/mongodb/templates/mongod.conf.j2
+++ b/roles/mongodb/templates/mongod.conf.j2
@@ -71,7 +71,7 @@ operationProfiling:
   slowOpThresholdMs: {{ mongodb_operation_profiling_slow_op_threshold_ms }}
   mode: {{ mongodb_operation_profiling_mode }}
 
-{% if mongodb_major_version is version("4.0", ">=") -%}
+{% if mongodb_major_version | version_compare("4.0", ">=") -%}
 cloud:
   monitoring:
     free:
