--- a/roles/mysql/templates/my.cnf.j2
+++ b/roles/mysql/templates/my.cnf.j2
@@ -18,4 +18,4 @@ default-authentication-plugin={{ mysql_authentication_plugin }}
 
 ## Not supported yet
 #datadir={{ mysql_data_dir }}
-#log-error={{ mysql_log_dir }}/{{ mysql_daemon }}.log
+#log-error={{ mysql_log_dir }}/{ mysql_daemon }}.log
