--- a/roles/sweagle/templates/3.1.0/core-application.yml.j2
+++ b/roles/sweagle/templates/3.1.0/core-application.yml.j2
@@ -64,3 +64,6 @@ cache:
  members: localhost:5701 #comma seperated list of the other cache members
  port: 5701 #optional
  portCount: 100 #optional
+
+ license:
+  key: {{ sweagle_license_key }}
