new SWEAGLE package location + support for 3.5.0 + dynamic hostname

--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -1,6 +1,6 @@
 server {
     listen       {{ nginx_port }};
-    server_name  localhost;
+    server_name  {{ inventory_hostname }};
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
