--- a/roles/vault/templates/vaultconfig.hcl.j2
+++ b/roles/vault/templates/vaultconfig.hcl.j2
@@ -1,12 +1,12 @@
 storage "mysql" {
-address = "localhost:{{ sweagle_mysql_port }}"
+address = "{{ groups['dbservers'][0] }}:{{ sweagle_mysql_port }}"
 username = "{{ sweagle_mysql_user }}"
 password = "{{ sweagle_mysql_password }}"
 database = "{{ vault_backend_db | default('vault') }}"
 scheme = "http"
 }
 listener "tcp" {
-address = "{{ vault_server }}:{{ vault_port | default(8200) }}"
+address = "{{ inventory_hostname }}:{{ vault_port | default(8200) }}"
 tls_disable = 1
 }
 disable_mlock = true
