correct error on auto-unseal process

--- a/roles/vault/templates/vaultUnseal.service.j2
+++ b/roles/vault/templates/vaultUnseal.service.j2
@@ -2,7 +2,8 @@
 Description=HashiCorp Vault Service
 
 [Service]
-ExecStart={{ vault_install_dir }}/vaultUnsealStartup.sh
+ExecStart={{ vault_install_dir }}/vault server -config={{ vault_conf_dir }}/vaultconfig.hcl
+ExecStartPost=/bin/bash -c "{{ vault_install_dir }}/unseal.sh"
 
 [Install]
 WantedBy=multi-user.target
