--- a/roles/mysql/templates/my.cnf.j2
+++ b/roles/mysql/templates/my.cnf.j2
@@ -1,38 +1,55 @@
+# {{ ansible_managed }}
+
 #
 # The MySQL database server configuration file.
 #
 # You can copy this to one of:
 # - "/etc/mysql/my.cnf" to set global options,
 # - "~/.my.cnf" to set user-specific options.
+#
+# One can use all long options that the program supports.
+# Run program with --help to get a list of available options and with
+# --print-defaults to see which it would actually understand and use.
+#
+# For explanations see
+# http://dev.mysql.com/doc/mysql/en/server-system-variables.html
 
-!includedir {{ mysql_config_dir }}/conf.d/
-!includedir {{ mysql_config_dir }}/mysql.conf.d/
+#
+# * IMPORTANT: Additional settings that can override those from this file!
+#   The files must end with '.cnf', otherwise they'll be ignored.
+#
+
+[mysqld]
+# Calculate default IP address of ansible inventory_hostname
+bind-address    = {{ mysql_bind_address | default('127.0.0.1') }}
+# Local IP detected by Ansible: {{ ansible_default_ipv4.address | default('127.0.0.1') }}
+port            = {{ mysql_port | default(3306) }}
+user            = {{ mysql_system_user }}
+
+datadir=/var/lib/mysql
+socket=/var/lib/mysql/mysql.sock
+pid-file=/var/run/mysqld/mysqld.pid
+{% if ansible_os_family == "Debian" %}
+log-error=/var/log/mysql/error.log
+{% else %}
+log-error=/var/log/mysqld.log
+{% endif %}
 
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
 
-
-## Not supported yet
-#datadir={{ mysql_data_dir }}
-#log-error={{ mysql_log_dir }}/{ mysql_daemon }}.log
-
-# default values for ubuntu
-#datadir=/var/lib/mysql
-#socket=/run/mysqld/mysqld.sock
-#log-error=/var/log/mysql/error.log
-#pid-file=/run/mysqld/mysqld.pid
-
-# default values for redhat
-#datadir=/var/lib/mysql
-#socket=/var/lib/mysql/mysql.sock
-#log-error=/var/log/mysqld.log
-#pid-file=/var/run/mysqld/mysqld.pid
-
-
-[client]
-user={{ mysql_root_user | default('root') }}
-password={{ mysql_root_password }}
-
-[mysqld]
-port={{ mysql_port | default(3306) }}
-default-authentication-plugin={{ mysql_authentication_plugin }}
+#
+# Remove leading # and set to the amount of RAM for the most important data
+# cache in MySQL. Start at 70% of total RAM for dedicated server, else 10%.
+# innodb_buffer_pool_size = 128M
+#
+# Remove leading # to turn on a very important data integrity option: logging
+# changes to the binary log between backups.
+# log_bin
+#
+# Remove leading # to set options mainly useful for reporting servers.
+# The server defaults are faster for transactions and fast SELECTs.
+# Adjust sizes as needed, experiment to find the optimal values.
+# join_buffer_size = 128M
+# sort_buffer_size = 2M
+# read_rnd_buffer_size = 2M
