split mysql and mongodb

--- a/roles/mongodb/templates/mongod.conf-sweagle.j2
+++ b/roles/mongodb/templates/mongod.conf-sweagle.j2
@@ -27,7 +27,7 @@ processManagement:
 
 # network interfaces
 net:
-  port: "{{ sweagle_mongo_port }}"
+  port: "{{ mongodb_net_port }}"
   bindIp: "{{ mongodb_net_bindip }}"
 
 
