--- a/roles/sweagle/templates/3.5.0/appConfig.settings.j2
+++ b/roles/sweagle/templates/3.5.0/appConfig.settings.j2
@@ -23,4 +23,4 @@ sweaglScriptsPath="/scripts"
 dbUserName="{{ sweagle_mysql_user }}"
 dbUserPassword=" {{ sweagle_mysql_password }}"
 dbSchemaName="{{ sweagle_mysql_db }}"
-dbServerName="{{ groups['dbservers'][0] }}"
+dbServerName="{{ sweagle_mysql_host }}"
